--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "where-is-my-stuff",
   "version": "0.0.0",
   "license": "MIT",
+  "author": {
+    "name": "Calil Amaral",
+  },
   "scripts": {
   },
   "private": true,
