--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.0.0",
   "license": "MIT",
   "author": {
-    "name": "Calil Amaral",
+    "name": "Calil Amaral"
   },
   "scripts": {
+    "prepare": "husky install"
   },
   "private": true,
-  "dependencies": {
-  },
   "devDependencies": {
-    "nx": "15.6.3",
     "@nrwl/workspace": "15.6.3",
-    "typescript": "~4.8.2",
-    "prettier": "^2.6.2"
+    "husky": "^8.0.3",
+    "nx": "15.6.3",
+    "prettier": "^2.6.2",
+    "typescript": "~4.8.2"
   }
 }
