--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "nx": "15.6.3",
     "prettier": "^2.6.2",
     "typescript": "~4.8.2"
+  },
+  "dependencies": {
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2"
   }
 }
