--- a/apps/storage/docker-compose.yml
+++ b/apps/storage/docker-compose.yml
@@ -49,3 +49,22 @@ services:
       CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
       CONFLUENT_METRICS_TOPIC_REPLICATION: 1
       PORT: 9021
+
+  postgres:
+    image: postgres:12
+    restart: always
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    env_file:
+      - .env.development.local
+  graphql-engine:
+    image: hasura/graphql-engine:v2.18.0
+    ports:
+      - '8080:8080'
+    depends_on:
+      - 'postgres'
+    restart: always
+    env_file:
+      - .env.development.local
+volumes:
+  db_data:
