--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "axios": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "kafkajs": "^2.2.3",
     "prisma": "^4.10.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
