--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 # PostgreSQL
-POSTGRES_PASSWORD=postgrespassword
 POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgrespassword
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=auth
+POSTGRES_SCHEMA=public
 
 # Hasura
 PG_DATABASE_URL="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}"
@@ -16,3 +17,10 @@ HASURA_GRAPHQL_ENABLED_LOG_TYPES=startup, http-log, webhook-log, websocket-log, 
 HASURA_GRAPHQL_ADMIN_SECRET=myadminsecretkey
 HASURA_GRAPHQL_ENDPOINT=http://localhost:8080
 HANDLER_WEBHOOK_BASE_URL=http://172.17.0.1:4200
+
+# Application
+## Prisma
+DATABASE_URL="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${POSTGRES_PORT}/auth?schema=${POSTGRES_SCHEMA}"
+
+## Feature Flags
+PERSISTENT_STORAGE_ENABLED=false
