--- a/apps/persistence/docker-compose.yml
+++ b/apps/persistence/docker-compose.yml
@@ -34,10 +34,10 @@ services:
       CONFLUENT_METRICS_ENABLE: 'false'
       CONFLUENT_SUPPORT_CUSTOMER_ID: 'anonymous'
 
-  control-center:
+  confluent-control-center:
     image: confluentinc/cp-enterprise-control-center:7.3.0
     hostname: control-center
-    container_name: control-center
+    container_name: confluent-control-center
     depends_on:
       - kafka
     ports:
@@ -52,14 +52,16 @@ services:
 
   postgres:
     image: postgres:12
+    container_name: postgres
     ports:
       - '5432:5432'
     restart: always
     env_file:
       - .env.development.local
 
-  graphql-engine:
+  hasura:
     image: hasura/graphql-engine:v2.18.0
+    container_name: hasura
     ports:
       - '8080:8080'
     depends_on:
