--- a/apps/persistence/docker-compose.yml
+++ b/apps/persistence/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       - '5432:5432'
     restart: always
     env_file:
-      - .env.development.local
+      - .env
 
   hasura:
     image: hasura/graphql-engine:v2.18.0
@@ -68,4 +68,4 @@ services:
       - 'postgres'
     restart: always
     env_file:
-      - .env.development.local
+      - .env
