fix: adjust env setup

--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ HANDLER_WEBHOOK_BASE_URL=http://172.17.0.1:4200
 
 # Application
 ## Prisma
-DATABASE_URL="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${POSTGRES_PORT}/auth?schema=${POSTGRES_SCHEMA}"
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/auth?schema=${POSTGRES_SCHEMA}
 
 ## Feature Flags
 PERSISTENT_STORAGE_ENABLED=false
