--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ POSTGRES_DB=auth
 POSTGRES_SCHEMA=public
 
 # Hasura
-PG_DATABASE_URL="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}"
+PG_DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 PG_DATABASE_PASSWORD=${POSTGRES_PASSWORD}
 HASURA_GRAPHQL_METADATA_DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 HASURA_GRAPHQL_ENABLE_CONSOLE=true
