--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@auth/shared/*": ["libs/shared/src/*"],
+      "@infra/prisma/*": ["prisma/*"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
