--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,7 @@ HANDLER_WEBHOOK_BASE_URL=http://172.17.0.1:4200
 # Mongo Database container initialization (https://hub.docker.com/_/mongo)
 MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=example
-MONGO_INITDB_DATABASE=psps
+MONGO_INITDB_DATABASE=auth
 
 # Mongo Express (https://github.com/mongo-express/mongo-express)
 ME_CONFIG_MONGODB_ADMINUSERNAME=${MONGO_INITDB_ROOT_USERNAME}
@@ -36,12 +36,14 @@ DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/aut
 ### MongoDB
 MONGODB_USER=${MONGO_INITDB_ROOT_USERNAME}
 MONGODB_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+MONGODB_PORT=27017
 MONGODB_DBNAME=${MONGO_INITDB_DATABASE}
 MONGODB_HOST=localhost
 MONGODB_POOLSIZE=100
 MONGODB_TIMEOUT=5000
 MONGODB_SSL=false
-MONGODB_DATABASE_URL=mongo://${MONGODB_USER}:{MONGODB_PASSWORD}@{MONGODB_HOST}/${MONGODB_DBNAME}?ssl=${MONGODB_SSL}&connectTimeoutMS=${MONGODB_TIMEOUT}&maxPoolSize=${MONGODB_POOLSIZE}
+MONGODB_AUTH_SOURCE=admin
+MONGODB_DATABASE_URL=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@${MONGODB_HOST}:${MONGODB_PORT}/${MONGODB_DBNAME}?ssl=${MONGODB_SSL}&connectTimeoutMS=${MONGODB_TIMEOUT}&maxPoolSize=${MONGODB_POOLSIZE}&authSource=${MONGODB_AUTH_SOURCE}
 
 ## Feature Flags
 FLAG_IN_MEMORY_DATABASE_ENABLED=true
