config: add env and adjust .env.example

--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,4 @@ MONGODB_DATABASE_URL=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT
 ## Feature Flags
 FLAG_IN_MEMORY_DATABASE_ENABLED=true
 FLAG_IN_MEMORY_EVENTS_ENABLED=true
+FLAG_USE_MONGODB_INSTEAD_OF_POSTGRESQL=false
