--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "prepare": "husky install",
     "pre-commit": "yarn test:shared",
     "release": "standard-version",
-    "auth-api:setup": "make infra-setup",
-    "auth-api:serve": "make auth-api-serve",
-    "auth-consumer:serve": "make auth-consumer-serve",
+    "auth-api-only:serve": "make auth-api-only-serve",
+    "auth-consumer-only:serve": "make auth-consumer-only-serve",
+    "auth-consumer-with-api:serve": "make auth-consumer-with-api-serve",
     "test:shared": "nx test shared"
   },
   "private": true,
@@ -46,6 +46,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/microservices": "^9.3.9",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nrwl/nest": "^15.6.3",
