--- a/apps/auth-consumer-only/project.json
+++ b/apps/auth-consumer-only/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "auth-consumer",
+  "name": "auth-consumer-only",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/auth-consumer/src",
+  "sourceRoot": "apps/auth-consumer-only/src",
   "projectType": "application",
   "targets": {
     "build": {
@@ -10,11 +10,11 @@
       "options": {
         "target": "node",
         "compiler": "tsc",
-        "outputPath": "dist/apps/auth-consumer",
-        "main": "apps/auth-consumer/src/main.ts",
-        "tsConfig": "apps/auth-consumer/tsconfig.app.json",
-        "assets": ["apps/auth-consumer/src/assets"],
-        "webpackConfig": "apps/auth-consumer/webpack.config.js"
+        "outputPath": "dist/apps/auth-consumer-only",
+        "main": "apps/auth-consumer-only/src/main.ts",
+        "tsConfig": "apps/auth-consumer-only/tsconfig.app.json",
+        "assets": ["apps/auth-consumer-only/src/assets"],
+        "webpackConfig": "apps/auth-consumer-only/webpack.config.js"
       },
       "configurations": {
         "production": {
@@ -27,11 +27,11 @@
     "serve": {
       "executor": "@nrwl/js:node",
       "options": {
-        "buildTarget": "auth-consumer:build"
+        "buildTarget": "auth-consumer-only:build"
       },
       "configurations": {
         "production": {
-          "buildTarget": "auth-consumer:build:production"
+          "buildTarget": "auth-consumer-only:build:production"
         }
       }
     },
@@ -39,14 +39,14 @@
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["apps/auth-consumer/**/*.ts"]
+        "lintFilePatterns": ["apps/auth-consumer-only/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/auth-consumer/jest.config.ts",
+        "jestConfig": "apps/auth-consumer-only/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
