--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,9 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@adapters/*": ["libs/adapters/src/*"],
-      "@auth/shared/*": ["libs/shared/src/*"],
-      "@infra/prisma/*": ["prisma/*"],
-      "@where-is-my-stuff/adapters": ["libs/adapters/src/index.ts"]
+      "@core": ["libs/core/src/*"],
     }
   },
   "exclude": ["node_modules", "tmp"]
