refactor: move code to different layers

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@adapters/*": ["libs/adapters/src/*"],
-      "@core": ["libs/core/src/*"],
+      "@core/*": ["libs/core/src/*"],
+      "@infra/*": ["libs/infra/src/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
