--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "paths": {
       "@adapters/*": ["libs/adapters/src/*"],
       "@core/*": ["libs/core/src/*"],
-      "@infra/*": ["libs/infra/src/*"]
+      "@infra/*": ["libs/infra/src/*"],
+      "@system/shared": ["libs/shared/src/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
