docs: add kafka env vars and rename variables

--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,11 @@ MONGODB_SSL=false
 MONGODB_AUTH_SOURCE=admin
 MONGODB_DATABASE_URL=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@${MONGODB_HOST}:${MONGODB_PORT}/${MONGODB_DBNAME}?ssl=${MONGODB_SSL}&connectTimeoutMS=${MONGODB_TIMEOUT}&maxPoolSize=${MONGODB_POOLSIZE}&authSource=${MONGODB_AUTH_SOURCE}
 
+## Kafka
+KAFKA_BROKER=localhost:9092
+KAFKA_CLIENT_ID=my-service-name
+KAFKA_CONSUMER_GROUP_ID=my-service-name
+
 ## Feature Flags
 FLAG_IN_MEMORY_DATABASE_ENABLED=true
 FLAG_IN_MEMORY_EVENTS_ENABLED=true
