--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,10 @@ ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
 ME_CONFIG_MONGODB_URL=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongo:27017
 
 # Application
+## Database
+### Database provider
+DATABASE_PROVIDER=mongodb
+
 ## Prisma
 ### PostgreSQL
 DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/auth?schema=${POSTGRES_SCHEMA}
@@ -45,12 +49,11 @@ MONGODB_SSL=false
 MONGODB_AUTH_SOURCE=admin
 MONGODB_DATABASE_URL=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@${MONGODB_HOST}:${MONGODB_PORT}/${MONGODB_DBNAME}?ssl=${MONGODB_SSL}&connectTimeoutMS=${MONGODB_TIMEOUT}&maxPoolSize=${MONGODB_POOLSIZE}&authSource=${MONGODB_AUTH_SOURCE}
 
-## Kafka
+
+## Events
+EVENTS_PROVIDER=kafka
+
+### Kafka
 KAFKA_BROKER=localhost:9092
 KAFKA_CLIENT_ID=my-service-name
 KAFKA_CONSUMER_GROUP_ID=my-service-name
-
-## Feature Flags
-FLAG_IN_MEMORY_DATABASE_ENABLED=true
-FLAG_IN_MEMORY_EVENTS_ENABLED=true
-FLAG_USE_MONGODB_INSTEAD_OF_POSTGRESQL=false
