refactor: unify modules and add default env var

--- a/.env.example
+++ b/.env.example
@@ -47,7 +47,8 @@ MONGODB_POOLSIZE=100
 MONGODB_TIMEOUT=5000
 MONGODB_SSL=false
 MONGODB_AUTH_SOURCE=admin
-MONGODB_DATABASE_URL=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@${MONGODB_HOST}:${MONGODB_PORT}/${MONGODB_DBNAME}?ssl=${MONGODB_SSL}&connectTimeoutMS=${MONGODB_TIMEOUT}&maxPoolSize=${MONGODB_POOLSIZE}&authSource=${MONGODB_AUTH_SOURCE}
+# MONGODB_DATABASE_URL=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@${MONGODB_HOST}:${MONGODB_PORT}/${MONGODB_DBNAME}?ssl=${MONGODB_SSL}&connectTimeoutMS=${MONGODB_TIMEOUT}&maxPoolSize=${MONGODB_POOLSIZE}&authSource=${MONGODB_AUTH_SOURCE}
+MONGODB_DATABASE_URL=mongodb://root:example@localhost:27017/auth?ssl=false&connectTimeoutMS=5000&maxPoolSize=100&authSource=admin
 
 
 ## Events
