feat: use customizable changelog preset

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "prepare": "husky install",
     "pre-commit": "yarn test:unit",
-    "release:no-push": "lerna version --yes --conventional-commits --changelog-preset conventionalcommits --no-push",
-    "release": "lerna version --yes --conventional-commits --changelog-preset conventionalcommits",
+    "release:no-push": "lerna version --yes --conventional-commits --changelog-preset ./changelog-preset.config.js --no-push",
+    "release": "lerna version --yes --conventional-commits --changelog-preset ./changelog-preset.config.js",
     "api-only:serve": "make api-only-serve",
     "consumer-only:serve": "make consumer-only-serve",
     "consumer-with-api:serve": "make consumer-with-api-serve",
