--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "pre-commit": "yarn test:unit",
     "release:no-push": "lerna version --yes --conventional-commits --changelog-preset ./changelog-preset.config.js --no-push",
     "release": "lerna version --yes --conventional-commits --changelog-preset ./changelog-preset.config.js",
-    "api-only:serve": "make api-only-serve",
-    "consumer-only:serve": "make consumer-only-serve",
+    "service-rest-api:serve": "make service-rest-api-serve",
+    "service-consumer:serve": "make service-consumer-serve",
     "consumer-with-api:serve": "make consumer-with-api-serve",
     "test:unit": "yarn nx run-many --target=test --all=true",
     "env:setup": "cp .env.example .env",
