--- a/apps/service-rest-api-e2e/project.json
+++ b/apps/service-rest-api-e2e/project.json
@@ -1,13 +1,13 @@
 {
-  "name": "api-only-e2e",
+  "name": "service-rest-api-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "implicitDependencies": ["api-only"],
+  "implicitDependencies": ["service-rest-api"],
   "targets": {
     "e2e": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{e2eProjectRoot}"],
       "options": {
-        "jestConfig": "apps/api-only-e2e/jest.config.ts",
+        "jestConfig": "apps/service-rest-api-e2e/jest.config.ts",
         "passWithNoTests": true
       }
     },
@@ -15,7 +15,7 @@
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["apps/api-only-e2e/**/*.{js,ts}"]
+        "lintFilePatterns": ["apps/service-rest-api-e2e/**/*.{js,ts}"]
       }
     }
   }
