--- a/apps/service-rest-api/project.json
+++ b/apps/service-rest-api/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "consumer-only",
+  "name": "service-rest-api",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/consumer-only/src",
+  "sourceRoot": "apps/service-rest-api/src",
   "projectType": "application",
   "targets": {
     "build": {
@@ -10,11 +10,11 @@
       "options": {
         "target": "node",
         "compiler": "tsc",
-        "outputPath": "dist/apps/consumer-only",
-        "main": "apps/consumer-only/src/main.ts",
-        "tsConfig": "apps/consumer-only/tsconfig.app.json",
-        "assets": ["apps/consumer-only/src/assets"],
-        "webpackConfig": "apps/consumer-only/webpack.config.js"
+        "outputPath": "dist/apps/service-rest-api",
+        "main": "apps/service-rest-api/src/main.ts",
+        "tsConfig": "apps/service-rest-api/tsconfig.app.json",
+        "assets": ["apps/service-rest-api/src/assets"],
+        "webpackConfig": "apps/service-rest-api/webpack.config.js"
       },
       "configurations": {
         "production": {
@@ -27,11 +27,11 @@
     "serve": {
       "executor": "@nrwl/js:node",
       "options": {
-        "buildTarget": "consumer-only:build"
+        "buildTarget": "service-rest-api:build"
       },
       "configurations": {
         "production": {
-          "buildTarget": "consumer-only:build:production"
+          "buildTarget": "service-rest-api:build:production"
         }
       }
     },
@@ -39,14 +39,14 @@
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["apps/consumer-only/**/*.ts"]
+        "lintFilePatterns": ["apps/service-rest-api/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/consumer-only/jest.config.ts",
+        "jestConfig": "apps/service-rest-api/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
