feat: add open api, guards and restructure folders

--- a/.env.example
+++ b/.env.example
@@ -31,7 +31,7 @@ ME_CONFIG_MONGODB_URL=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROO
 # Application
 ## Database
 ### Database provider
-DATABASE_PROVIDER=mongodb
+DATABASE_PROVIDER=memory
 
 ## Prisma
 ### PostgreSQL
@@ -52,7 +52,7 @@ MONGODB_DATABASE_URL=mongodb://root:example@localhost:27017/auth?ssl=false&conne
 
 
 ## Events
-EVENTS_PROVIDER=kafka
+EVENTS_PROVIDER=memory
 
 ### Kafka
 KAFKA_BROKER=localhost:9092
