--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "consumer-with-api:serve": "make consumer-with-api-serve",
     "test:unit": "yarn nx run-many --target=test --all=true",
     "env:setup": "cp .env.example .env",
+    "prisma:generate:postgresql": "prisma generate --schema libs/adapters/src/database/infra/prisma/postgresql.schema.prisma",
     "start": "yarn nx run-many --target=serve --all=true"
   },
   "private": true,
@@ -50,9 +51,11 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/devtools-integration": "^0.1.3",
     "@nestjs/microservices": "^9.3.9",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.2.1",
     "@nrwl/nest": "^15.6.3",
     "@prisma/client": "^4.10.1",
     "axios": "^1.0.0",
