feat: enhance repositories and modules

--- a/.env.example
+++ b/.env.example
@@ -1,43 +1,40 @@
-# PostgreSQL
+# Application #########################################################################################################
+## Environment
+NODE_ENV=development
+PORT=3000
+
+## Database provider ("mongodb-mongoose-orm" | "postgresql-prisma-orm" | "postgresql-type-orm" |  "in-memory")
+DATABASE_PROVIDER=in-memory
+
+## Events provider ('kafka' | 'in-memory')
+EVENTS_PROVIDER=in-memory
+
+## Transporter ('nestjs-default-kafka-transporter' | 'nestjs-kafka-dynamox-transporter' | 'dyna-kafka-js')
+EVENTS_TRANSPORTER=dyna-kafka-js
+
+## Auth
+API_KEY=my-secret-api-key
+
+## Feature Flags
+DYW_1234_EXAMPLE_FEATURE_ENABLED=true
+
+# Database #########################################################################################################
+## PostgreSQL
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgrespassword
-POSTGRES_HOST=postgres
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-POSTGRES_DB=auth
+POSTGRES_DB=nestjs-service-template
 POSTGRES_SCHEMA=public
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?schema=${POSTGRES_SCHEMA}
 
-# Hasura
-PG_DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
-PG_DATABASE_PASSWORD=${POSTGRES_PASSWORD}
-HASURA_GRAPHQL_METADATA_DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
-HASURA_GRAPHQL_ENABLE_CONSOLE=true
-HASURA_GRAPHQL_DEV_MODE=true
-HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS=true
-HASURA_GRAPHQL_ENABLED_LOG_TYPES=startup, http-log, webhook-log, websocket-log, query-log
-HASURA_GRAPHQL_ADMIN_SECRET=myadminsecretkey
-HASURA_GRAPHQL_ENDPOINT=http://localhost:8080
-HANDLER_WEBHOOK_BASE_URL=http://172.17.0.1:4200
-
-# Mongo Database container initialization (https://hub.docker.com/_/mongo)
+## MongoDB
+### Mongo Database container initialization (https://hub.docker.com/_/mongo)
 MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=example
-MONGO_INITDB_DATABASE=auth
+MONGO_INITDB_DATABASE=nestjs-service-template
 
-# Mongo Express (https://github.com/mongo-express/mongo-express)
-ME_CONFIG_MONGODB_ADMINUSERNAME=${MONGO_INITDB_ROOT_USERNAME}
-ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
-ME_CONFIG_MONGODB_URL=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongo:27017
-
-# Application
-## Database
-### Database provider
-DATABASE_PROVIDER=memory
-
-## Prisma
-### PostgreSQL
-DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/auth?schema=${POSTGRES_SCHEMA}
-
-### MongoDB
+### MongoDB Connection
 MONGODB_USER=${MONGO_INITDB_ROOT_USERNAME}
 MONGODB_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
 MONGODB_PORT=27017
@@ -48,13 +45,27 @@ MONGODB_TIMEOUT=5000
 MONGODB_SSL=false
 MONGODB_AUTH_SOURCE=admin
 # MONGODB_DATABASE_URL=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@${MONGODB_HOST}:${MONGODB_PORT}/${MONGODB_DBNAME}?ssl=${MONGODB_SSL}&connectTimeoutMS=${MONGODB_TIMEOUT}&maxPoolSize=${MONGODB_POOLSIZE}&authSource=${MONGODB_AUTH_SOURCE}
-MONGODB_DATABASE_URL=mongodb://root:example@localhost:27017/auth?ssl=false&connectTimeoutMS=5000&maxPoolSize=100&authSource=admin
+MONGODB_DATABASE_URL=mongodb://root:example@localhost:27017/nestjs-service-template?ssl=false&connectTimeoutMS=5000&maxPoolSize=100&authSource=admin
 
-
-## Events
-EVENTS_PROVIDER=memory
-
-### Kafka
+# Events #########################################################################################################
+## Kafka
 KAFKA_BROKER=localhost:9092
-KAFKA_CLIENT_ID=my-service-name
-KAFKA_CONSUMER_GROUP_ID=my-service-name
+KAFKA_CLIENT_ID=nestjs-service-template
+KAFKA_CONSUMER_GROUP_ID=nestjs-service-template
+KAFKA_SASL_USERNAME=
+KAFKA_SASL_PASSWORD=
+KAFKA_TRANSACTIONAL_ID=random-string
+
+# Developer Tools #########################################################################################################
+
+# ## Hasura
+# PG_DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+# PG_DATABASE_PASSWORD=${POSTGRES_PASSWORD}
+# HASURA_GRAPHQL_METADATA_DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+# HASURA_GRAPHQL_ENABLE_CONSOLE=true
+# HASURA_GRAPHQL_DEV_MODE=true
+# HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS=true
+# HASURA_GRAPHQL_ENABLED_LOG_TYPES=startup, http-log, webhook-log, websocket-log, query-log
+# HASURA_GRAPHQL_ADMIN_SECRET=myadminsecretkey
+# HASURA_GRAPHQL_ENDPOINT=http://localhost:8080
+# HANDLER_WEBHOOK_BASE_URL=http://172.17.0.1:4200
