feat: use default kafka transport

--- a/.env.example
+++ b/.env.example
@@ -4,13 +4,13 @@ NODE_ENV=development
 PORT=3000
 
 ## Database provider ("mongodb-mongoose-orm" | "postgresql-prisma-orm" | "postgresql-type-orm" |  "in-memory")
-DATABASE_PROVIDER=in-memory
+DATABASE_PROVIDER=mongodb-mongoose-orm
 
 ## Events provider ('kafka' | 'in-memory')
-EVENTS_PROVIDER=in-memory
+EVENTS_PROVIDER=kafka
 
-## Transporter ('nestjs-default-kafka-transporter' | 'nestjs-kafka-dynamox-transporter' | 'dyna-kafka-js')
-EVENTS_TRANSPORTER=dyna-kafka-js
+## Transporter ('nestjs-default-kafka-transporter' | 'nestjs-custom-kafka-transporter' | 'simple-kafka-transporter')
+EVENTS_TRANSPORTER=nestjs-default-kafka-transporter
 
 ## Auth
 API_KEY=my-secret-api-key
@@ -51,7 +51,7 @@ MONGODB_DATABASE_URL=mongodb://root:example@localhost:27017/nestjs-service-templ
 ## Kafka
 KAFKA_BROKER=localhost:9092
 KAFKA_CLIENT_ID=nestjs-service-template
-KAFKA_CONSUMER_GROUP_ID=nestjs-service-template
+KAFKA_CONSUMER_GROUP_ID=nestjs-service-template-03
 KAFKA_SASL_USERNAME=
 KAFKA_SASL_PASSWORD=
 KAFKA_TRANSACTIONAL_ID=random-string
