--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "pre-commit": "yarn test:unit",
     "release:no-push": "lerna version --yes --conventional-commits --changelog-preset ./changelog-preset.config.js --no-push",
     "release": "lerna version --yes --conventional-commits --changelog-preset ./changelog-preset.config.js",
-    "service-rest-api:serve": "make service-rest-api-serve",
-    "service-consumer:serve": "make service-consumer-serve",
     "consumer-with-api:serve": "make consumer-with-api-serve",
     "test:unit": "yarn nx run-many --target=test --all=true",
     "env:setup": "cp .env.example .env",
-    "prisma:generate:postgresql": "prisma generate --schema libs/adapters/src/database/infra/prisma/postgresql.schema.prisma",
+    "prisma:generate:postgres": "prisma generate --schema libs/adapters/src/database/infra/prisma/postgresql.schema.prisma",
+    "prisma:db:pull": "prisma db pull --schema libs/adapters/src/database/infra/prisma/postgresql.schema.prisma",
+    "prisma:migrate:dev": "prisma migrate dev --schema libs/adapters/src/database/infra/prisma/postgresql.schema.prisma",
+    "prisma:studio": "prisma studio --schema libs/adapters/src/database/infra/prisma/postgresql.schema.prisma",
+    "start:example:mongoose": "yarn env:setup && yarn prisma:generate:postgres && nx run-many --target=serve --all=true",
+    "start:example:prisma": "yarn env:setup && yarn prisma:generate:postgres && yarn prisma:migrate:dev && nx run-many --target=serve --all=true",
+    "build:service-rest-api": "yarn prisma:generate:postgres && nx run build service-rest-api",
+    "build:service-consumer": "yarn prisma:generate:postgres && nx run build service-consumer",
+    "service-rest-api:serve": "make service-rest-api-serve",
+    "service-consumer:serve": "make service-consumer-serve",
     "start": "yarn nx run-many --target=serve --all=true"
   },
   "private": true,
