fix: rename services

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "knowledge-network",
+  "name": "micro-applications-template",
   "version": "0.1.0",
   "license": "MIT",
   "author": {
