config(docker): build

--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "prisma:studio": "prisma studio --schema libs/adapters/src/database/infra/prisma/postgresql.schema.prisma",
     "start:example:mongoose": "yarn env:setup && yarn prisma:generate:postgres && nx run-many --target=serve --all=true",
     "start:example:prisma": "yarn env:setup && yarn prisma:generate:postgres && yarn prisma:migrate:dev && nx run-many --target=serve --all=true",
-    "build:service-rest-api": "yarn prisma:generate:postgres && nx run build service-rest-api",
-    "build:service-consumer": "yarn prisma:generate:postgres && nx run build service-consumer",
+    "build:service-rest-api": "yarn prisma:generate:postgres && yarn nx run service-rest-api:build",
+    "build:service-consumer": "yarn prisma:generate:postgres && yarn nx run service-consumer:build",
+    "serve:service-rest-api:production": "node dist/apps/service-rest-api/main.js",
     "service-rest-api:serve": "make service-rest-api-serve",
     "service-consumer:serve": "make service-consumer-serve",
     "start": "yarn nx run-many --target=serve --all=true",
