--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for micro-applications-template on 2023-04-27T20:52:21-03:00
+# fly.toml app configuration file generated for white-glitter-8442 on 2023-04-27T22:31:16-03:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "micro-applications-template"
+app = "white-glitter-8442"
 primary_region = "gru"
 
 [http_service]
