--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prisma:generate:postgres": "prisma generate --schema libs/adapters/src/database/infra/prisma/postgresql.schema.prisma",
     "prisma:db:pull": "prisma db pull --schema libs/adapters/src/database/infra/prisma/postgresql.schema.prisma",
     "prisma:migrate:dev": "prisma migrate dev --schema libs/adapters/src/database/infra/prisma/postgresql.schema.prisma",
+    "prisma:migrate:dev:create-only": "prisma migrate dev --schema libs/adapters/src/database/infra/prisma/postgresql.schema.prisma --create-only",
     "prisma:migrate:deploy": "prisma migrate deploy --schema libs/adapters/src/database/infra/prisma/postgresql.schema.prisma",
     "prisma:studio": "prisma studio --schema libs/adapters/src/database/infra/prisma/postgresql.schema.prisma",
     "start:example:mongoose": "yarn env:setup && yarn prisma:generate:postgres && nx run-many --target=serve --all=true",
