--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,7 @@ POSTGRES_PORT=5432
 POSTGRES_DB=micro-applications-template
 POSTGRES_SCHEMA=public
 DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?schema=${POSTGRES_SCHEMA}
+DIRECT_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?schema=${POSTGRES_SCHEMA}
 
 ## MongoDB
 ### Mongo Database container initialization (https://hub.docker.com/_/mongo)
