feat: add terraform config

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,14 @@ prisma/generated
 
 # Next.js
 .next
+
+# Terraform
+.terraform/
+*.tfstate
+*.tfstate.backup
+*.tfvars
+*.override.tf
+*_override.tf
+*.log
+.env
+secrets.auto.tfvars
